[package]
name = "riphttp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
url = "2.5.7"
riphttplib = { path = "riphttplib" }
futures = "0.3"
indicatif = { version = "0.17", default-features = false, features = ["tokio"] }
async-trait = "0.1.89"

[patch.crates-io]
tokio-rustls = { path = "vendor/tokio-rustls-0.26.4" }
